Add Kerry wedding photos as dossier exhibits

--- a/index.html
+++ b/index.html
@@ -1183,6 +1183,16 @@
     </div>
   </section>
 
+  <!-- ===== SUBJECT DOSSIER PHOTO ===== -->
+  <section style="padding: 2rem 0;">
+    <div class="container">
+      <div class="kerry-portrait fade-in" style="transform: rotate(-1.2deg);">
+        <img src="images/kerry-1.jpg" alt="Subject: Kerry Vinokur">
+        <div class="portrait-caption">EXHIBIT P-1 &middot; Subject photographed at undisclosed formal event &middot; Expression consistent with someone who knows she's won the argument before it started</div>
+      </div>
+    </div>
+  </section>
+
   <!-- ===== CAREER TIMELINE ===== -->
   <section id="timeline">
     <div class="container">
@@ -1283,6 +1293,22 @@
           <h3>Geographic Reach</h3>
           <div class="stat">3</div>
           <p>Major South African cities where Kerry maintains a professional presence: Johannesburg, Cape Town, and Durban. Applications for a fourth office have been preemptively denied by competitors citing "market saturation of competence."</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== PHOTOGRAPHIC EVIDENCE ===== -->
+  <section style="padding: 2rem 0;">
+    <div class="container">
+      <div style="display: flex; gap: 1.5rem; flex-wrap: wrap; justify-content: center;">
+        <div class="image-frame fade-in" style="max-width: 380px; transform: rotate(0.8deg);">
+          <img src="images/kerry-2.jpg" alt="Exhibit P-2">
+          <div class="caption">EXHIBIT P-2 &middot; Subject surrounded by known associates &middot; All visibly aware they are in the presence of legal greatness</div>
+        </div>
+        <div class="image-frame fade-in" style="max-width: 380px; transform: rotate(-0.6deg);">
+          <img src="images/kerry-3.jpg" alt="Exhibit P-3">
+          <div class="caption">EXHIBIT P-3 &middot; The Committee notes the "composed confidence" classified by our analysts as "peak Vinokur energy"</div>
         </div>
       </div>
     </div>
